[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenuController.gd" type="Script" id=1]
[ext_resource path="res://Pixellari.tres" type="DynamicFont" id=2]
[ext_resource path="res://PixellariBig.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuController" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.933333, 0.933333, 0.933333, 1 )

[node name="ButtonRegion" type="Control" parent="."]
anchor_left = 0.2
anchor_top = 0.6
anchor_right = 0.8
anchor_bottom = 0.85

[node name="Region1" type="Control" parent="ButtonRegion"]
anchor_right = 0.33
anchor_bottom = 1.0

[node name="Button" type="Button" parent="ButtonRegion/Region1"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.65
margin_left = 10.0
margin_right = -10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"

[node name="Region2" type="Control" parent="ButtonRegion"]
anchor_left = 0.33
anchor_right = 0.66
anchor_bottom = 1.0

[node name="Button" type="Button" parent="ButtonRegion/Region2"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.65
margin_left = 10.0
margin_right = -10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Credits"

[node name="Region3" type="Control" parent="ButtonRegion"]
anchor_left = 0.66
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="ButtonRegion/Region3"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.65
margin_left = 10.0
margin_right = -10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.2
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] Kind Opponent"
text = " Kind Opponent"

[connection signal="button_down" from="ButtonRegion/Region1/Button" to="MenuController" method="play_press"]
[connection signal="button_down" from="ButtonRegion/Region2/Button" to="MenuController" method="credits_press"]
[connection signal="button_down" from="ButtonRegion/Region3/Button" to="MenuController" method="quit_press"]
